tests/baselines/reference/objectTypesWithPredefinedTypesAsName.errors.txt
==== tests/cases/conformance/types/specifyingTypes/predefinedTypes/objectTypesWithPredefinedTypesAsName.ts (4 errors) ====
    // it is an error to use a predefined type as a type name
    
    class any { }
          ~~~
!!! error TS2414: Class name cannot be 'any'
    
    class number { }
          ~~~~~~
!!! error TS2414: Class name cannot be 'number'
    
    class boolean { }
          ~~~~~~~
!!! error TS2414: Class name cannot be 'boolean'
    class bool { } // not a predefined type anymore
    
    class string { }
          ~~~~~~
!!! error TS2414: Class name cannot be 'string'
    
    
    